fix code format

--- a/2you/index.html
+++ b/2you/index.html
@@ -1,4 +1,25 @@
-<code>
-    # aha, you found me :-)
-    print("wechat id: cocacolawahaha")
-</code>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Waiting for you ...</title>
+  </head>
+  <body>
+    <pre>
+                                         
+     /\                                         
+    /  \__      _____  ___  ___  _ __ ___   ___ 
+   / /\ \ \ /\ / / _ \/ __|/ _ \| '_ ` _ \ / _ \
+  / ____ \ V  V /  __/\__ \ (_) | | | | | |  __/
+ /_/    \_\_/\_/ \___||___/\___/|_| |_| |_|\___|
+                                                
+
+-- start --
+
+# aha, you found me :-)
+print("wechat id: cocacolawahaha")
+
+--  end  --
+</pre
+    >
+  </body>
+</html>
